# tsh

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  devbox.json  example_config.toml  flake.nix  justfile  litecli-config  notes.md
migrations/: 20250621103020_init.down.sql  20250621103020_init.up.sql
migrations/0001-init/: down.sql  up.sql
migrations/0002-tagging/: down.sql  up.sql
notes/: notes.md  roadmap.md  ui-flow-sketch.drawio
src/: api.rs  db.rs  lib.rs  llm.rs  main.rs  model.rs
src/tui/: app.rs  common.rs  develop.rs  iterate.rs  main_menu.rs  recent.rs  search.rs
vec0/: README.md
