[package]
name = "tsh"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3.20.0"
chrono = "0.4"
tokio = { version = "1.45.1", features = ["full"] }
async-openai = "0.28.3"
sqlite-vec = "0.1.6"
rusqlite = { version = "0.36.0", features = ["bundled"] }
zerocopy = "0.8.26"
include_dir = "0.7.4"
rusqlite_migration = { version = "2.2.0", features = ["from-directory"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = { version = "0.27.1", features = ["derive"] }
trait-variant = "0.1.2"
toml = "0.9.0"
serde = "1.0.219"
